fixed white stripe on small screens

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -90,6 +90,10 @@ header {
     font-size: 4rem;
 }
 
+.fs-3_3 {
+  font-size: 3.3rem;
+}
+
 .fs-3 {
     font-size: 3rem;
 }
